<resources>
    <string name="app_name">MuslimDawah</string>
    <string name="title_1">Muslim</string>
    <string name="title_2">Da\'wah</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="account_access">Dont\' Have Account ?</string>
    <string name="sign_in">Log in</string>
    <string name="sign_up">Create an account</string>
    <string name="remember">Remember me?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sigin_option">Or sign in with</string>
    <string name="google_plus_description">Google Plus</string>
    <string name="create_an_account">Create an account</string>
    <string name="description">Social Media For Da\'wah</string>
    <string name="desc_background">background</string>
    <string name="sign_in_start">SIGN IN</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="user">User</string>
    <string name="follow">Follow</string>
    <string name="logout">Logout</string>
    <string name="social_media_for_da_wah">Social Media For Da\'wah</string>
    <string name="facebook_icon">facebook-icon</string>
    <string name="splash_screen">Splash_screen</string>
    <string name="remember_me">Remember me ?</string>

    <!--List view resource example-->
    <string-array name="countries_arry">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
    </string-array>
</resources>
