<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_picture"
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:layout_marginTop="@dimen/MarginTop"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/username_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/username"
            android:textSize="@dimen/usernameTextView"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/containerPadding"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/follow_button"
                android:layout_width="@dimen/BtnWidth"
                android:layout_height="@dimen/BtnHeight"
                android:layout_marginEnd="@dimen/marginRightButton"
                android:background="@drawable/btn_rounded_ripple_green"
                android:text="@string/follow"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="@dimen/BtnWidth"
                android:layout_height="@dimen/BtnHeight"
                android:background="@drawable/btn_rounded_ripple_red"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>